style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
}

.header-wrapper {
  /* max-width: 1200px; */
  /* background-color: #265073; */
  /* background: linear-gradient(127deg, #265073 0%, #596FB7 45%, #C6CF9B 70%, rgb(244,234,203) 100%); */
  /* background: linear-gradient(-235deg, #000000 10%, #122153 55%, #FEAE6F 85%, rgb(244,234,203) 100%); */
  /* insert img static/img/aurora.png as bg */
  background-image: url('static/img/aurora.png'); 
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.header-container {
color: #FEAE6F;
text-align: center; /* Center content on small screens */
padding: 20px; /* Reduced padding for small screens */
opacity: 1.0;
z-index: 1000;
position: relative;
max-width: 1600px;
margin: 0 auto;
}


.icon {
  height: 1.8em; /* Set a fixed height for all icons */
  width: auto; /* Adjust width to maintain aspect ratio */
  margin-bottom: 5px; /* Space between icon and text */
}

.icon-row {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap; /* Allow wrapping to the next line */
  width: 100%;
  padding: 20px; /* Padding around the images */
  line-height: 1rem;
}

.icon-link {
  display: flex;
  flex-direction: column; /* Stack image and text vertically */
  align-items: center; /* Center the image and text */
  text-align: center; /* Center text below the image */
  color: inherit; /* Inherit color from parent */
  padding: 10px; /* Add padding around the link */
  margin: 10px; /* Add margin around each link for spacing */
  border: 3px solid #508af6;
  border-radius: 10px;
  background-color: #d6eefb;
  flex: 1 1 100px; /* Allow flex items to grow and shrink */
}

.icon-link:hover {
  background-color: #88c2fa;
}

@media (max-width: 600px) {
  .icon-link {
      flex: 1 1 45%; /* Allow each icon link to take up about half the width */
  }
}


.icon-container {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.icon-item {
  align-items: center;
  display: flex;
}

.icon-item img {
  width: 30px;
  height: 30px;
  margin-right: 1em;
  filter: invert(87%) sepia(11%) saturate(748%) hue-rotate(340deg) brightness(110%) contrast(100%);
}

@media (max-width: 768px) {
.icon-item img {
  margin-bottom: 1em;
}
}

.header-content strong {
  color: #ffe099;
}

.header-content {
  color: #FFF7D4;
  text-align: left;
}

.header-content h1 {
  font-size: 1.5em;
  margin-bottom: 0.5em;
  line-height: 1.2;
  /* color: #8c1515; */
  color: #F9A44A;
}

.header-content h2 {
  margin-bottom: 0.5em;
  line-height: 1.2;
  color: #FFE781;
}

.header-container p {
  font-size: 1.2rem;
}

@media (max-width: 768px) {
.header-container {
  padding: 16px;
  padding-top: 32px;
}

.header-content h1 {
  font-size: 3em;
  margin-bottom: 0.125em;
}
.header-content h2 {
  font-size: 1.7em;
  /* text no wrap */
  white-space: nowrap;
  margin-top: 0;
}

.header-container p {
  font-size: 1.04rem;
}

.header-image {
  /* 80% */
  max-width: 90%;
  /* center */
  margin-left: auto;
  margin-right: auto;
}
}

.button-container {
  margin-top: 20px; /* Add margin above the buttons */
  margin-bottom: 20px; /* Add margin below the buttons */
}

.button-container a.button {
  display: inline-block; /* Make buttons inline */
  margin: 10px; /* Space around buttons */
  padding: 10px 20px; /* Increase tap area for touch screens */
}

.button-container a.button {
  background-color: #F2D3B4; /* Yellow background */
  color: #000; /* Black text */
  border: 2px solid #ffc107; /* Orange border */
  border-radius: 25px; /* Rounded borders */
  padding: 10px 20px; /* Top and bottom padding, left and right padding */
  margin: 5px; /* Space between the buttons */
  text-decoration: none; /* Remove the underline from links */
  display: inline-block; /* Display links as inline blocks */
  font-weight: bold; /* Make the text bold */
  transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
}

.button-container a.button:hover {
  background-color: #EAB682; /* Darker yellow background on hover */
  color: #fff; /* White text on hover */
}

/* Styles for larger screens using a media query */
@media (min-width: 600px) {
  .header-container {
    display: flex; /* Use flexbox for positioning on larger screens */
    justify-content: space-between; /* Space between the content and image */
    align-items: center; /* Align items vertically */
    padding: 50px 50px; /* Increase padding for larger screens */
  }

  .header-content {
    max-width: calc(50% - 20px); /* Adjust width to include margin */
    text-align: left; /* Align text to the left for larger screens */
    margin-right: 20px; /* Add margin to the right of the header content */
  }

  .header-content h1 {
    font-size: 3em; /* Increase font size for larger screens */
  }

  .header-image {
    max-width: calc(50% - 20px); /* Adjust width to include margin */
  }

  .header-image img {
    max-width: 100%; /* Image should be responsive within the container */
    height: auto; /* Maintain the aspect ratio */
  }
}

@media screen and (max-width: 1000px) {
  d-contents {
      display: none;
  }
}

.byline {
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  padding: 0 5px 10px; /* Add padding to the top and bottom */
  margin-bottom: 20px;
}

.byline-container {
  padding-top: 2rem;
  padding-bottom: 0.5rem;
  text-align: center;  /* Center align the text */
}

.byline-column {
  /* Columns will take up width based on their content */
  display: flex;
  flex-direction: column;
  text-align: left; /* All text within columns left-aligned */
}

.byline-column h3 {
  margin-bottom: 10px; /* Space between the header and the content */
  color: #333; /* Dark grey color for the text */
  font-size: 16px; /* Adjust the font size as needed */
}

.byline-column p {
  color: #666; /* Lighter grey color for the text */
  font-size: 14px; /* Adjust the font size as needed */
  margin: 5px 0; /* Space between paragraphs */
}

.author-link, .affiliation-link {
  font-size: larger;
  color: black; /* Set the color to match the other text */
  text-decoration: none; /* Removes the underline */
  border-bottom: none;
  cursor: pointer; /* Changes cursor to pointer to indicate link */
  white-space: nowrap;  /* Prevent breaking names across lines */
  /* Increase vertical spacing */
  line-height: 2.3rem; /* Increase line height for better readability */
}

.author-link {
  font-weight: bold;
}

.author-note {
  font-size: 0.9rem;
  color: #999; /* Light grey color for the text */
  margin-top: 0.25em; /* Space above the note */
  margin-bottom: 0.25em; /* Space below the note */
}


.author-link:hover, .affiliation-link:hover {
text-decoration: underline; /* Adds underline on hover for visual feedback */
border-bottom: none;
color: #007bff;
}


d-article {
  contain: none;
}

d-article d-contents {
  max-width: 100%; /* Or the maximum width you want it to have */
  box-sizing: border-box; /* Include padding in the width calculation */
  align-self: start;
  grid-column: 1 / 4;
  grid-row: auto / span 4;
  justify-self: end;
  margin-top: 5em;
  padding-right: 3em;
  padding-left: 2em;
  border-right: 1px solid rgba(0, 0, 0, 0.1);
  z-index: 1000;
}


d-article d-contents nav {
  display: block;
}

d-article d-contents nav h4 {
  margin-top: 0;
  margin-bottom: 1em;
}

d-article d-contents nav div {
  color: rgba(91, 184, 73, 0.8);
  font-weight: bold;
}

d-article d-contents nav a {
  color: rgba(0, 0, 0, 0.8);
  border-bottom: none;
  text-decoration: none;
}

d-article d-contents li {
  list-style-type: none;
}

d-article d-contents ul {
  padding-left: 1em;
}

d-article d-contents nav ul li {
  margin-bottom: 0.25em;
}

d-article d-contents nav a:hover {
  text-decoration: underline solid rgba(0, 0, 0, 0.6);
}

d-article d-contents nav ul {
  margin-top: 0;
  margin-bottom: 6px;
}

d-article d-contents nav > div {
  display: block;
  outline: none;
  margin-bottom: 0.5em;
}

d-article d-contents nav > div > a {
  font-size: 13px;
  font-weight: 600;
}

d-article d-contents nav > div > a:hover,
d-article d-contents nav > ul > li > a:hover {
  text-decoration: none;
}

.active-nav-item {
  color: #0d6efd; /* Change as per your preference */
}

.shaded-figure {
  background-color: hsl(0, 0%, 97%);
  border-top: 1px solid hsla(0, 0%, 0%, 0.1);
  border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
  padding: 30px 0;
}

.pointer {
  position: absolute;
  width: 26px;
  height: 26px;
  top: 26px;
  left: -48px;
}

.sidebar {
  position: sticky;
}

d-article section{
  margin: 0 !important;
}

